--- a/css/hamburger.css
+++ b/css/hamburger.css
@@ -4,122 +4,98 @@
  * @author Jonathan Suh @jonsuh
  * @site https://jonsuh.com/hamburgers
  * @link https://github.com/jonsuh/hamburgers
- *
-$hamburger-padding-x           : 15px !default;
-$hamburger-padding-y           : 15px !default;
-$hamburger-layer-width         : 40px !default;
-$hamburger-layer-height        : 4px !default;
-$hamburger-layer-spacing       : 6px !default;
-$hamburger-layer-color         : #000 !default;
-$hamburger-layer-border-radius : 4px !default;
-$hamburger-hover-opacity       : 0.7 !default;
-$hamburger-active-layer-color  : $hamburger-layer-color !default;
-$hamburger-active-hover-opacity: $hamburger-hover-opacity !default;
-
-// To use CSS filters as the hover effect instead of opacity,
-// set $hamburger-hover-use-filter as true and
-// change the value of $hamburger-hover-filter accordingly.
-$hamburger-hover-use-filter   : false !default;
-$hamburger-hover-filter       : opacity(50%) !default;
-$hamburger-active-hover-filter: $hamburger-hover-filter !default;
-
-*/
+ */
+* {
+  box-sizing: border-box;
+}
 
 .hamburger {
-  /* height paddings is gotten after setting all
-  margins and paddings to the container,
-  width paddings proportion get from total button width */
-  padding: 12.7% 9%;
-  /* width humb to width container proportion */
-  width: 28%;
-  display: inline-block;
+  position: absolute;
   cursor: pointer;
   transition-property: opacity, filter;
   transition-duration: 0.15s;
   transition-timing-function: linear;
   font: inherit;
   color: inherit;
-  border: 3px solid white;
+  text-transform: none;
   background-color: transparent;
-  overflow: visible; 
+  border: 0.2vw solid var(--hamburger-color);
+  overflow: visible;
 }
 
-.hamburger:hover {
-  opacity: 0.7; 
-}
-
-.hamburger.is-active:hover {
-  opacity: 1; 
-}
-
-.hamburger-box {
-  display: block;
-  position: relative;
+.hamburger:hover,
+.hamburger.is-active:hover,
+.hamburger:active,
+.hamburger.is-active:active,
+.hamburger:focus,
+.hamburger.is-active:focus, {
+  outline: none;
+  outline-offset: 0;
 }
 
 .hamburger.is-active .hamburger-inner,
 .hamburger.is-active .hamburger-inner::before,
 .hamburger.is-active .hamburger-inner::after {
-  background-color: #fff;
+  background-color: var(--hamburger-color); 
 }
 
-.hamburger-inner {
-  top: 50%;
-  left: 0;
-  margin-bottom: -2px;
+.hamburger-box {
+  width: 40%;
+  position: absolute;
+  left: 30%;
+  top: 38.7%; /* half free space in the .hamburger */
 }
 
 .hamburger-inner,
 .hamburger-inner::before,
 .hamburger-inner::after {
   width: 100%;
-  height: 3px;
-  background-color: #fff;
-  border-radius: 4px;
+  height: 0.2vw;
+  background-color: var(--hamburger-color);
+  border-radius: 0.2vw;
   position: absolute;
   transition-property: transform;
   transition-duration: 0.15s;
   transition-timing-function: ease;
 }
 
-.hamburger-inner::before, .hamburger-inner::after {
+.hamburger-inner::before,
+.hamburger-inner::after {
   content: "";
 }
 
-.hamburger-inner::before {
-  /* container is 3px height, top 9px = 300%  */
-  /*top: -300%;*/
-  margin-top: -25%;
-  left: 0;
-}
+/*
+ * Spring
+ */
 
-.hamburger-inner::after {
-  /* container is 3px height, bottom 9px = 300%  */
-  /*bottom: -300%;*/
-  margin-top: 25%;
-  left: 0;
-}
-
-/* Spin */
-
-.hamburger--spin .hamburger-inner::after {
-  transition: bottom 0.1s 0.25s ease-in, transform 0.12s cubic-bezier(0.55, 0.055, 0.675, 0.19); 
-}
-
-.hamburger--spin.is-active .hamburger-inner {
-  transform: rotate(-225deg);
-  transition-delay: 0.12s;
-  transition-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1); 
-}
-
-.hamburger--spin.is-active .hamburger-inner::before {
+.hamburger--spring .hamburger-inner {
   top: 0;
-  opacity: 0;
-  transition: top 0.1s ease-out, opacity 0.1s 0.12s ease-out; 
+  transition: background-color 0s 0.13s linear;
 }
 
-.hamburger--spin.is-active .hamburger-inner::after {
-  bottom: 0;
-  transform: rotate(-90deg);
-  transition: bottom 0.1s ease-out, transform 0.22s 0.12s cubic-bezier(0.215, 0.61, 0.355, 1); 
+.hamburger--spring .hamburger-inner::before {
+  top: 0.67vw;
+  transition: top 0.1s 0.2s cubic-bezier(0.33333, 0.66667, 0.66667, 1), transform 0.13s cubic-bezier(0.55, 0.055, 0.675, 0.19);
+}
+
+.hamburger--spring .hamburger-inner::after {
+  top: 1.33vw;
+  transition: top 0.2s 0.2s cubic-bezier(0.33333, 0.66667, 0.66667, 1), transform 0.13s cubic-bezier(0.55, 0.055, 0.675, 0.19);
+}
+
+.hamburger--spring.is-active .hamburger-inner {
+  transition-delay: 0.22s;
+  background-color: transparent !important;
+}
+
+.hamburger--spring.is-active .hamburger-inner::before {
+  top: 0;
+  transition: top 0.1s 0.15s cubic-bezier(0.33333, 0, 0.66667, 0.33333), transform 0.13s 0.22s cubic-bezier(0.215, 0.61, 0.355, 1);
+  transform: translate3d(0, 0.67vw, 0) rotate(45deg);
+}
+
+.hamburger--spring.is-active .hamburger-inner::after {
+  top: 0;
+  transition: top 0.2s cubic-bezier(0.33333, 0, 0.66667, 0.33333), transform 0.13s 0.22s cubic-bezier(0.215, 0.61, 0.355, 1);
+  transform: translate3d(0, 0.67vw, 0) rotate(-45deg);
 }
