--- a/css/style.css
+++ b/css/style.css
@@ -1,37 +1,58 @@
-/* All aspect ratio calculate from the mockup with 1500px width */
+/* All base sizes are taken from mockup with 1500px width */
 
 @import url('https://fonts.googleapis.com/css?family=Roboto+Condensed:300,300i,400,400i,700,700i');
+@import url('https://fonts.googleapis.com/css?family=Roboto');
 
 :root {
-  /*   fonts   */
-  --main-font: "Roboto Condensed", sans-serif;
+  /* fonts */
+  --main-font-regular: 400 0.87vw/0.93vw "Roboto Condensed", sans-serif;
+  --menu-font: 400 0.87vw/1.67vw "Roboto", sans-serif;
+
+  /* z-index */
+  --zindex-bg-img: -5;
 
 
   /*   colors   */
-  --header-: hsl(68, 17%, 91%);
-  --header-highlight: hsl(172, 47%, 65%);
-  --header-bg-color: rgba(16,25,41,0.51);
-  --text-dark: #333;
-  --text-light: white;
-  --main-bg-color: #f5f5f5;
-  --second-bg-color:#eeeeef;
-  --btn-bg-color: #4fc4b0;
-  --btn-cap-color: #f5f5f5;
-  --headline-color: #40474e; 
-  --btn-hover-color: #d2d5da;
-  --line-color: #d2d5da;
+  --body-bg: #eaebe3;
+  --header-bg: #f7f7f7;
+  --menu-bg: #7acec3;;
+  --project-header-bg: #ebb240;
+  --project-fondue-bg: white;
+  --project-potter-bg: #dfe0d9;
+  --project-tabano-bg:#e9eae2;
+  --project-louis-bg: #5b6f79;
+  --project-p22-bg: #eaeaea;
+  --project-fiji-bg: red;
+  --project-sesann-bg: #fcfcfc;
+  --project-alessi-bg: #cecece;
+  --project-footer-bg: var(--project-header-bg);
+  --studio-header-bg: #ff9b6d;
+  --studio-description-bg: #eaebe3;
+  --stuff-bg: #eaebe3;
+  --news-header-bg: #d4edbf;
+  --news-list-bg: #e6eae0;
+  --footer-bg: /*#eaebe3*/red;
+
+  --menu-color: white;
+
+  --hamburger-color: white;
+
+  --headline-bg: #40474e; 
+  --btn-hover-bg: #d2d5da;
+  --line-bg: #d2d5da;
 }
 
 * {
   box-sizing: border-box;
-  outline: 1px solid red;
+  /*outline: 1px solid red;*/
 }
 
 html {
-  font-family:    var(--main-font);
-  font-weight: 300;
-  font-size: 13px;
-  line-height: 1;
+  font: var(--main-font-regular);
+  text-transform: uppercase;
+}
+body {
+  background-color: red;
 }
 
 a {
@@ -43,86 +64,209 @@ img {
   display: block;
 }
 
-.upcase {
-  text-transform: uppercase;
-}
-
-/*Header section*/
-
-.header-container {
-  display: grid;
-  grid-template-columns: repeat(30, 1fr);
-}
-
-.content-header {
-  grid-column: span 21;
-  display: grid;
-  /* left margin, logo, image proportions in the header*/
-  grid-template-columns: 16% 16% 1fr;
-  /*position: relative;*/
-  justify-content: center;
-  align-items: start;
-  background-color: #f7f7f7;
-}
-
-/*.logo-container::before {
-  content:'';
+/* img as background*/
+.bg-img {
   position: absolute;
-  left: 0;
-  top: 0;
-  bottom: 0;
-  right: 0;
-  background: rgba(0, 0, 0, 0.5);
-  z-index: -1;
+  width: 100%;
+  height: 100%;
+  /*z-index: var(--zindex-bg-img);*/
+  object-fit: cover;
 }
 
-*/
-.header-img {
-  grid-column: 1 / 4;
-  grid-row: 1;
-}
-
-/* fixed issue in the mockup */
-.header-img img {
-  margin-left: 4%;
-}
-
-.header-logo {
-  grid-column: 2;
-  grid-row: 1;
-  margin-top: 30%
-}
-
-.header-logo-img {
-  /* save aspect ratio image with same margin-bottom */
-  /* 207 / 162 ~ 130%                                */
+/* For every defined component add class.
+ * There are define color, aspect ratio padding, special
+ * elements or unique design
+ */
+ .container {
   position: relative;
   width: 100%;
-  padding-bottom: 130%
+  height: 100%;
+  /* if you need recalculate padding-bottom for every child = height/width%
+   * default value 1:1 = 100%
+   */
+   padding-bottom: var(--aspect-ratio);
+ }
+
+ .grid-wrapper {
+  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(30, 1fr);
+  grid-auto-rows: auto;
 }
-.header-logo-img img {
-  /* save aspect ratio image */
+
+.header {
+  --aspect-ratio: 47.62%;
+  grid-column: span 21;
+  grid-row: 1;
+  background-color: var(--header-bg);
+}
+
+.menu {
+  --aspect-ratio: 111.11%;
+  grid-column: span 9;
+  grid-row: 1;
+  background-color: var(--menu-bg);
+  color: var(--menu-color);
+}
+
+.project-header {
+  --aspect-ratio: 111.11%;
+  grid-column: span 9;
+  grid-row: 2 / 4;
+  background-color: var(--project-header-bg);
+  overflow: hidden;
+}
+
+.project-fondue {
+  --aspect-ratio: 71.43%;
+  grid-column: span 12;
+  grid-row: 2 / 4;
+  background-color: var(--project-fondue-bg);
+}
+
+.project-potter {
+  --aspect-ratio: 55.56%;
+  grid-column: span 9;
+  grid-row: 2;
+  background-color: var(--project-potter-bg);
+}
+
+.project-tabano {
+  --aspect-ratio: 103.33%;
+  grid-column: span 9;
+  grid-row: 3 / 5;
+  background-color: var(--project-tabano-bg);
+}
+
+.project-louis {
+  --aspect-ratio: 155%;
+  grid-column: span 6;
+  grid-row: 4 / 6;
+  background-color: var(--project-louis-bg);
+}
+
+.project-p22 {
+  --aspect-ratio: 62%;
+  grid-column: span 15;
+  grid-row: 4 / 6;
+  background-color: var(--project-p22-bg);
+}
+
+.project-fiji {
+  --aspect-ratio: 55.56%;
+  grid-column: span 9;
+  grid-row: 5 / 6;
+  background-color: var(--project-fiji-bg);
+}
+
+.project-sesann {
+  --aspect-ratio: 40%;
+  grid-column: span 15;
+  grid-row: 6;
+  background-color: var(--project-sesann-bg);
+}
+
+.project-alessi {
+  --aspect-ratio: 100%;
+  grid-column: span 6;
+  grid-row: 6;
+  background-color: var(--project-alessi-bg);
+}
+
+.project-footer {
+  --aspect-ratio: 66.67%;
+  grid-column: span 9;
+  grid-row: 6;
+  background-color: var(--project-footer-bg);
+}
+
+.studio-header {
+  --aspect-ratio: 111.11%;
+  grid-column: span 9;
+  grid-row: 7;
+  background-color: var(--studio-header-bg);
+}
+
+.studio-description {
+  --aspect-ratio: 47.62%;
+  grid-column: span 21;
+  grid-row: 7;
+  background-color: var(--studio-description-bg);
+}
+
+.stuff-section {
+  --aspect-ratio: 26%;
+  grid-column: span 30;
+  grid-row: 8;
+  background-color: var(--stuff-bg);
+}
+
+.news-header {
+  --aspect-ratio: 111.11%;
+  grid-column: span 9;
+  grid-row: 9;
+  background-color: var(--news-header-bg);
+}
+
+.news-list {
+  --aspect-ratio: 111.11%;
+  grid-column: span 21;
+  grid-row: 9;
+  background-color: var(--news-list-bg);
+}
+
+.footer {
+  --aspect-ratio: 43.33%;
+  grid-column: span 30;
+  grid-row: 11;
+  background-color: var(--footer-bg);
+}
+
+
+
+
+
+
+
+
+
+
+.map {
   position: absolute;
   top: 0;
-  right: 0;
-  bottom: 0;
   left: 0;
+  width: 50%;
+  height: 100%;
+  border: 0;
 }
 
-.header-logo-name {
-  text-transform: uppercase;
+
+
+
+
+
+
+
+/* header style */
+
+.header-wrapper {
+  position: absolute;
+  margin: 5% 0 0 16%;
+  width: 15.43%;
+}
+.logo-img {
+  width: 100%;
+}
+
+.logo-title {
   width: min-content;
-  font-family: var(--main-font);
+  font-family: var(--main-fsont);
   /* save aspect ratio - font size to viewport width proportion*/
   font-size: 1.2vw;
-  font-weight: 400;
-  line-height: 1;
-  color: #383d3c;
 }
 
-.header-logo-socials {
-  /* 60px / 168px ~ 36% */
-  margin-top: 36%;
+.socials-list {
+  margin-top: 38.27%;
   display: flex;
   flex-flow: row nowrap;
   align-items: center;
@@ -130,19 +274,18 @@ img {
 }
 
 .social-icon {
-  flex: 0 16%;
+  flex: 0 1 16%;
 }
 
-/* Navigation section */
-
-.header-menu {
-  grid-column: span 9;
-  background-color: var(--header-highlight);
-  /*padding-top: 100%;*/
+.social-icon:hover {
   position: relative;
-  /*overflow: hidden;*/
+  opacity: 0.8;
+  transform: scale(1.2);
+  transition-duration: 0.2s;
 }
-/* added line*/
+
+/* menu style */
+
 .strikethrough {
   position: absolute;
   top:0;
@@ -155,105 +298,97 @@ img {
 .strikethrough::before {
   content: "";
   position: absolute;
-  bottom: -1px;
   background-color: white;
-  width: 149%;
+  bottom: -1px;
+  width: 160%;
   height: 2px;
-  transform: rotate(-47.55deg);
+  transform: rotate(-48deg);
   transform-origin: 0;
-  /*z-index: -1;*/
 }
 
-.navigation {
-  --hover-color: hsl(40, 82%, 58%);
-  --animation: all .3s ease-in-out;
-
+.address,
+.contacts {
+  position: absolute;
   display: flex;
-  justify-content: center;
-  position: relative;
+  flex-flow: column nowrap;
+  color: var(--menu-color);
 }
-/* look hamburger.css file*/
+
+.address{
+  left: 13%;
+  bottom: 38%;
+}
+.contacts {
+  left: 31%;
+  bottom: 22%;
+}
+
+/* to look at the hamburger.css for details */
 .hamburger {
-  margin: 10%;
+  position: absolute;
+  left: 35%;
+  top: 10%;
+  width: 30%;
+  height: 23%;
 }
+
+.hamburger:hover,
+.hamburger.is-active:hover {
+  background-color: var(--project-header-bg);
+  border-color: var(--project-header-bg);
+}
+
 .hamburger.is-active {
-  opacity: 1; 
-  background-color: var(--hover-color);
+  background-color: var(--project-header-bg);
+  border-color: var(--project-header-bg);
 }
 
 /* Dropdown Content (Hidden by Default) */
-.navigation-content {
+.navigation {
+  width: 133.33%;
+  height: 23%;
   position: absolute;
-  /* proportion navigation height and buttom height */
-  top: 21.4%;
-  bottom: 21.4%;
-  /* offset navigetion content to the right from button */
-  right: 63%;
-  left: -97%;
-  background: var(--hover-color);
-  border: 3px solid white;
+  right: 65%;
+  top: 10%;
+  background-color: var(--project-header-bg);
+  visibility: hidden;
   opacity: 0;
 
   display: flex;
   flex-flow: row nowrap;
   align-items: center;
   justify-content: space-evenly;
-  transition: var(--animation);
-  overflow-x: visible;
+  transition-delay: 0.2s;
 }
 
 .navigation-item {
-  display: flex;
-  justify-content: center;
+  position: relative;
+  flex: 0 0 auto;
   color: #fff;
+  transition: all 0.3s ease-in-out 0s;
 }
 
-.section-item {
-  flex: 1;
-  flex-flow: row nowrap;
-}
-.section-item:hover {
-  font-size: 1.5em;
+.navigation-item:hover {
+  position: relative;
+  transform: scale(1.5);
 }
 
 /* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
 .show {
+  visibility: visible;
   opacity: 1;
+  transition: opacity 0.2s ease-in-out;
 }
 
-.adrress {
-  display:;
+
+
+
+.project-item {
+ flex: 1;
+ flex-flow: column nowrap;
+ position: relative;
 }
-
-/*Projects section*/
-.section-projects {
-  display: grid;
-  grid-template-columns: repeat(30, 1fr);
-  grid-auto-rows: minmax(min-content, auto);
-}
-
-/* For every defined component add container-[child name].
- * There are define color, aspect ratio padding, special elements or
- * unique design 
- */
- .container {
-  position: relative;
-  overflow: hidden;
-  width: 100%;
-  height: 100%;
-  /* you need recalculate padding-bottom for every child = height/width%
-   * default value 1:1 = 100%
-   */
-   padding-bottom: var(--aspect-ratio);
-   background-color: var(--bg-container-color);
- }
-
- .project-item {
-   flex: 1;
-   flex-flow: column nowrap;
-   position: relative;
- }
- .project-item::before {
+.project-item::before {
   content: "";
   position: absolute;
   left: -35%;
@@ -274,16 +409,6 @@ img {
 
 
 
-
-/* projects section */
-/* header element */
-.container-projects {
-  --bg-container-color:    hsl(40, 82%, 58%);
-  --aspect-ratio:          111%;
-
-  grid-column: span 9;
-  grid-row: 1 / 3;
-}
 
 .content-projects {
   position: absolute;
@@ -337,117 +462,12 @@ img {
   text-shadow: 0 0 0.5em rgba(255,255,255,0.9);
 }
 
-
-/* 2 element */
-.container-fondue {
-  --bg-container-color:    white;
-  --aspect-ratio:          83.3%;
-
-  grid-column: span 12;
-  grid-row: 1 / 3;
-  background-image: url("../images/foundue_lamp.png");
-  display: grid;
-  grid-template-columns: 16.7% fit-content 1fr;
-  grid-template-rows: repeat(4, auto);
-}
-.content {
-  position: absolute;
-}
 .project-rating {
   color: red;
   font-size: 1vw;
 }
+
 .heart-rating {
   width: 4%;
 }
 
-/* 3 element */
-.container-potter {
-  --bg-container-color:    white;
-  --aspect-ratio:          55.5%;
-  background-image: url("../images/pilesos_retina.png");
-
-  grid-column: span 9;
-  grid-row: 1;
-}
-.content {
-  position: absolute;
-}
-/* 4 element */
-.container-louis {
-  --bg-container-color:    red;
-  --aspect-ratio:          150%;
-
-  grid-column: span 6;
-  grid-row: 3 / 5;
-}
-.content {
-  position: absolute;
-}
-/* 5 element */
-.container-p22 {
-  --bg-container-color:    yellow;
-  --aspect-ratio:          60%;
-
-  grid-column: span 15;
-  grid-row: 3 / 5;
-}
-.content {
-  position: absolute;
-}
-/* 6 element */
-.container-tabano {
-  --bg-container-color:    pink;
-  --aspect-ratio:          100%;
-
-  grid-column: span 9;
-  grid-row: 2 / 4;
-}
-.content {
-  position: absolute;
-}
-/* 7 element */
-.container-fiji {
-  --bg-container-color:    white;
-  --aspect-ratio:          55.5%;
-
-  grid-column: span 9;
-  grid-row: 4;
-
-}
-.content {
-  position: absolute;
-}
-/* 8 element */
-.container-sesann {
-  --bg-container-color:    green;
-  --aspect-ratio:          40%;
-
-  grid-column: span 15;
-  grid-row: 5;
-
-}
-.content {
-  position: absolute;
-}
-/* 9 element */
-.container-alessi {
-  --bg-container-color:    red;
-  --aspect-ratio:          100%;
-
-  grid-column: span 6;
-  grid-row: 5;
-
-}
-.content {
-  position: absolute;
-}
-/* 10 element */
-.container-finish {
-  --bg-container-color:    orange;
-  --aspect-ratio:          66.7%;
-
-  grid-column: span 9;
-  grid-row: 5;
-
-}
