finish static markup

--- a/css/hamburger.css
+++ b/css/hamburger.css
@@ -46,6 +46,11 @@
   top: 38.7%; /* half free space in the .hamburger */
 }
 
+.hamburger-inner::before,
+.hamburger-inner::after {
+  content: "";
+}
+
 .hamburger-inner,
 .hamburger-inner::before,
 .hamburger-inner::after {
@@ -54,14 +59,9 @@
   background-color: var(--hamburger-color);
   border-radius: 0.2vw;
   position: absolute;
-  transition-property: transform;
+/*  transition-property: transform;
   transition-duration: 0.15s;
-  transition-timing-function: ease;
-}
-
-.hamburger-inner::before,
-.hamburger-inner::after {
-  content: "";
+  transition-timing-function: ease;*/
 }
 
 /*
@@ -70,7 +70,7 @@
 
 .hamburger--spring .hamburger-inner {
   top: 0;
-  transition: background-color 0s 0.13s linear;
+  /*transition: background-color 0s 0.13s linear;*/
 }
 
 .hamburger--spring .hamburger-inner::before {
