--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,7 @@
   --size-16: 1.1vw;
   --size-18: 1.2vw;
   --size-24: 1.6vw;
+  --size-32: 2.1vw;
   --size-48: 3.2vw;
 
   /* fonts */
@@ -223,10 +224,6 @@ img {
   background-color: var(--staff-bg);
 }
 
-.cv-position {
-  margin-top: var;
-}
-
 .news-header {
   position: relative;
   padding-bottom: 111.11%;
@@ -243,11 +240,19 @@ img {
   background-color: var(--news-list-bg);
 }
 
+.map {
+  position: relative;
+  grid-column: span 15;
+  grid-row: 10;
+  width: 100%;
+  height: 100%;
+  border: 0;
+}
+
 .footer {
   position: relative;
-  padding-bottom: 43.33%;
-  grid-column: span 30;
-  grid-row: 11;
+  grid-column: span 15;
+  grid-row: 10;
   background-color: var(--footer-bg);
 }
 
@@ -503,14 +508,14 @@ img {
 .project-link {
   position: relative;
   display: block;
-  margin-left: 2vw;
+  margin-left: 1.5em;
   font-size: var(--project-link-size);
 }
 /* common class */
 .project-link::before {
   content: "";
   position: absolute;
-  left: -30%;
+  left: -1.5em;
   height: 100%;
   width: 100%;
   opacity: 0;
@@ -545,10 +550,7 @@ img {
 .content-potter .feature-item {
   white-space: normal;
   height: 78%;
-}
-.content-potter .feature-item {
   text-transform: none;
-  font-size: var(--size-12);
 }
 
 /* louis xx */
@@ -957,28 +959,19 @@ img {
 }
 
 .footer {
-  padding: 10% 10% 5% 60%
+  padding: 20% 25% 5% 15%;
 }
-.map {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 50%;
-  height: 100%;
-  border: 0;
-}
-
 .footer .address {
-  position: relative;
-  left: 0;
+  position: static;
   margin-bottom: 1.2vw;
 }
 .footer .contacts {
-  position: relative;
-  left: 0;
+  position: static;
   margin-bottom: 21vw;
 }
-
+.copyright {
+  font-size: var(--size-12);
+}
 .footer-logo {
  float: right;
  width: 11vw;
@@ -989,22 +982,18 @@ img {
 @media  screen and (max-width: 1200px) {
 
   .md-100-p {
-    --aspect-ratio: 35%;
+    padding-bottom: 35%;
     grid-column: span 30;
   }
 
   .md-50-p {
-    --aspect-ratio: 70%;
+    padding-bottom: 70%;
     grid-column: span 15;
   }
 
   .md-hide {
-    --aspect-ratio: 0%;
+    padding-bottom: 0%;
     grid-column: span 30;
-  }
-
-  .md-clean {
-    display: none;
   }
 
   .menu {
@@ -1024,6 +1013,7 @@ img {
   }
 
   .address {
+    font-size: 1.5em;
     left: 11vw;
     bottom: 0;
     right:0;
@@ -1031,6 +1021,7 @@ img {
   }
 
   .contacts {
+    font-size: 1.5em;
     right: 0;
     bottom: 0;
     left: 70vw;
@@ -1059,43 +1050,52 @@ img {
   }
 
   .main-navigation {
+    font-size: 1.5em;
     right: 17vw;
     top: -30vw;
-  }
-
-  .features {
-    --project-title-size: var(--size-48);
-    --features-list-size: var(--size-18);
-    --project-link-size: var(--size-24);
-    --project-rating-value: var(--size-18);
   }
 
   .projects-header {
     grid-row: 3;
   }
 
-  .projects-header .projects-content {
-    transform: rotate(-48deg) translate(10vw, 14vw);
+  .projects-header .projects-line {
+    transform: rotate(-48deg) translate(0, 40%);
   }
-
   .projects-header .projects-nav {
-    transform: scale(4) rotate(48deg) translate(-150%, 80%);
+    transform: scale(4);
+  }
+  .projects-header .header-title {
+    transform: scale(0.7) translate(100%, 300%);
   }
 
-  .projects-header .projects-title {
-    right: 75%;
-    transform: scale(0.7) rotate(48deg) translate(140%, 25%);
+  .bg-img {
+    object-fit: cover;
+  }
+  .content {
+    padding: 10%;
+    --project-title-size: var(--size-32);
+    --project-feature-size: var(--size-18);
+    --project-link-size: var(--size-24);
+    --project-rating-size: var(--size-18);
+  }
+  .rating {
+    width: 2.5vw;
   }
 
   .project-fondue {
     grid-row: 3;
-    font-size: 1.5em;
+  }
+  .project-fondue .project-features {
+    width: 40%;
   }
 
   .project-potter {
     grid-row: 4;
   }
-
+  .project-potter .project-features {
+    width: 40%;
+  }
   .project-potter .bg-img {
     object-position: -10vw 0;
   }
@@ -1103,7 +1103,10 @@ img {
   .project-louis {
     grid-row: 4;
   }
-
+  .project-louis .project-features {
+    width: 80%;
+    height: 24%;
+  }
   .project-louis .bg-img {
     object-position: 0 -30vw;
   }
@@ -1111,15 +1114,29 @@ img {
   .project-p22 {
     grid-row: 5;
   }
-
+  .project-p22 .project-features {
+    margin-left: auto;
+    width: 50%;
+    height: 24%;
+  }
+  .project-p22 .project-title {
+    margin-left: auto;
+    width: 50%;
+  }
   .project-p22 .bg-img {
-    object-position: 0 -8vw;
+    object-position: 0 -7vw;
   }
 
   .project-tabano {
     grid-row: 6;
   }
-
+  .project-tabano .project-features {
+    flex-flow: column nowrap;
+    width: 35%;
+  }
+  .project-tabano .rating {
+    align-self: center;
+  }
   .project-tabano .bg-img {
     transform: scale(0.9);
     object-position: 9vw -1vw;
@@ -1128,7 +1145,14 @@ img {
   .project-fiji {
     grid-row: 6;
   }
-
+  .project-fiji .project-features {
+    margin-left: auto;
+    width: 35%;
+  }
+  .project-fiji .project-title {
+    margin-left: auto;
+    width: 35%;
+  }
   .project-fiji .bg-img {
     object-position: -3vw -1vw;
   }
