--- a/css/style.css
+++ b/css/style.css
@@ -696,8 +696,17 @@ img {
 }
 
 .left-content-studio {
+  padding: 0 4% 0 11%;
   flex: 0 0 48%;
   text-transform: none;
+}
+
+.md-studio-title {
+  display: none;
+  text-transform: uppercase;
+  font-size: var(--size-18);
+  font-weight: 700;
+  margin-bottom: 1em;
 }
 
 .header-text {
@@ -705,22 +714,17 @@ img {
   line-height: var(--size-18);
   font-style: italic;
   font-weight: 400;
-  margin-left: 25%;
-  margin-right: 10%;
-  margin-bottom: 5%;
+
 }
 
 .main-text {
   font-size: var(--size-18);
   line-height: var(--size-16);
-  margin-left: 25%;
-  margin-right: 10%;
   font-weight: 300;
 }
 
 .right-content-studio {
   flex: 0 0 34%;
-
 }
 
 .awards-info {
@@ -769,8 +773,9 @@ img {
   margin-bottom: 1.3em;
 }
 
-.staff {
-  padding: 6% 0;
+.content-staff {
+  padding: 6% 0%;
+  margin: 0 -1%;
   display: flex;
   flex-flow: row nowrap;
   justify-content: flex-start;
@@ -779,12 +784,11 @@ img {
 
 .staff-cv {
   flex: 0 0 26%;
-  margin-right: 2%;
+  margin: 0 1%;
 }
 
 .cv-info {
   margin: 0 1%;
-
 }
 
 .cv-name {
@@ -1058,7 +1062,6 @@ img {
   .projects-header {
     grid-row: 3;
   }
-
   .projects-header .projects-line {
     transform: rotate(-48deg) translate(0, 40%);
   }
@@ -1072,6 +1075,7 @@ img {
   .bg-img {
     object-fit: cover;
   }
+
   .content {
     padding: 10%;
     --project-title-size: var(--size-32);
@@ -1138,8 +1142,7 @@ img {
     align-self: center;
   }
   .project-tabano .bg-img {
-    transform: scale(0.9);
-    object-position: 9vw -1vw;
+    object-position: 9vw 0vw;
   }
 
   .project-fiji {
@@ -1160,57 +1163,103 @@ img {
   .project-sesann {
     grid-row: 7;
   }
-
-  .project-sesann .bg-img {
-    object-position: 0 0.5vw;
+  .content-sesann {
+    padding: 24% 10% 5% 20%;
+  }
+  .project-sesann .project-features {
+    width: 80%;
   }
 
   .project-alessi {
     grid-row: 8;
   }
+  .project-alessi .project-features {
+    margin-left: auto;
+    width: 35%;
+  }
+  .project-alessi .project-title {
+    margin-left: auto;
+    width: 35%;
+  }
 
-  .project-footer {
+  .projects-footer {
     grid-row: 8;
   }
-
-  .project-footer .projects-content {
-    transform: rotate(-48deg) translate(0%, 14vw);
+  .projects-footer .projects-line {
+    transform: rotate(-48deg) translate(0, 40%);
   }
-  .project-footer .projects-nav {
-    transform: scale(5) rotate(48deg) translate(-90%, -20%);
+  .projects-footer .projects-nav {
+    transform: scale(4) translate(100%, 20%);;
   }
-
-  .project-footer .projects-title {
-    transform: scale(0.7) rotate(48deg) translate(0%, 700%);
+  .projects-footer .header-title {
+    transform: scale(0.7) translate(100%, 200%);
   }
 
   .studio-header {
     grid-row: 9;
   }
+  .md-studio-title {
+    display: block;
+  }
+  .right-content-studio {
+    flex: 0 0 50%;
+  }
+
+  .left-content-studio {
+    padding: 0 4%;
+    flex: 0 0 50%;
+  }
 
   .studio-description {
+    padding-bottom: 45%;
     grid-row: 10;
-    --aspect-ratio: 0;
   }
 
-  .content-studio {
-    position: relative;
-  }
-
-  .stuff {
+  .staff-header {
     grid-row: 11;
+    display: none;
+  }
+
+  .staff {
+    grid-row: 12;
+    padding-bottom: 25%;
+  }
+  .content-staff {
+    padding: 0 10%;
+    justify-content: center;
+  }
+  .staff-cv {
+    flex: 0 0 calc(100% / 3);
   }
 
   .news-header {
-    grid-row: 12;
+    grid-row: 13;
   }
 
   .news-list {
-    grid-row: 12;
+    padding-bottom: 10%;
+    grid-row: 14;
+  }
+  .news-list {
+    display: grid;
+    grid-column-gap: 4%;
+    grid-template-columns: 3% 40% 40%;
+    grid-template-rows: 15% repeat(4, auto) 15%;
+  }
+
+  .map {
+    grid-row: 15;
+    grid-column: span 20;
   }
 
   .footer {
-    grid-row: 13;
+    grid-row: 15;
+    grid-column: span 10;
+    padding: 10%;
+  }
+  .footer .address,
+  .footer .contacts {
+    flex-flow: column nowrap;
   }
 
 }
