mobile layout without paddings and map

--- a/app/css/style.css
+++ b/app/css/style.css
@@ -264,7 +264,7 @@ img {
   width: min-content;
   /* save aspect ratio - font size to viewport width proportion*/
   font-size: var(--size-18);
-  line-height: var(--size-18);
+  line-height: 1.2;
 
 }
 
@@ -453,7 +453,6 @@ img {
 .project-item:hover::before {
   opacity: 1;
 }
-
 
 /* common class */
 .content {
@@ -693,7 +692,7 @@ img {
 
 .header-text {
   font-size: var(--size-18);
-  line-height: var(--size-18);
+  line-height: 1.2;
   font-style: italic;
   font-weight: 400;
 
@@ -701,7 +700,7 @@ img {
 
 .main-text {
   font-size: var(--size-18);
-  line-height: var(--size-16);
+  line-height: 1.2;
   font-weight: 300;
 }
 
@@ -718,7 +717,7 @@ img {
   margin-bottom: 1.6vw;
   border-bottom: 1px solid rgba(0,0,0,0.2);
   font-size: var(--size-14);
-  line-height: var(--size-18);
+  line-height: 1.2;
   font-weight: 700;
 }
 
@@ -742,14 +741,14 @@ img {
 
 .staff-title {
   font-size: var(--size-14);
-  line-height:  var(--size-14);
+  line-height:  1.2;
   font-weight: 400;
   margin-bottom: 1.3em;
 }
 
 .staff-description {
   font-size: var(--size-12);
-  line-height:  var(--size-18);
+  line-height:  1.5;
   text-transform: none;
   font-weight: 300;
   margin-bottom: 1.3em;
@@ -776,12 +775,12 @@ img {
 .cv-name {
   margin-top: 1.2vw;
   font-weight: 700;
-  line-height: var(--size-16);
+  line-height: 1.2;
 }
 
 .cv-position {
   font-weight: 700;
-  line-height: var(--size-16);
+  line-height: 1.2;
   font-weight: 400;
 }
 
@@ -860,28 +859,28 @@ img {
   grid-area: title-1;
   font-size: var(--size-24);
   font-weight: 700;
-  line-height: var(--size-24);
+  line-height: 1.1;
   padding: 0 1%;
 }
 .news-2-title {
   grid-area: title-2;
   font-size: var(--size-24);
   font-weight: 700;
-  line-height: var(--size-24);
+  line-height: 1.1;
   padding: 0 1%;
 }
 
 .news-1-date {
   grid-area: date-1;
   font-size: var(--size-12);
-  line-height: var(--size-24);
+  line-height: 1.2;
   color: grey;
   padding: 0 1%;
 }
 .news-2-date {
   grid-area: date-2;
   font-size: var(--size-12);
-  line-height: var(--size-24);
+  line-height: 1.2;
   align-self: start;
   padding: 0 1%;
   color: grey;
@@ -899,7 +898,7 @@ img {
   text-align: justify;
   text-transform: none;
   font-size: var(--size-12);
-  line-height: var(--size-14);
+  line-height: 1.2;
   padding: 0 1%;
   margin: 6% 0 3% 0;
 }
@@ -908,7 +907,7 @@ img {
   text-align: justify;
   text-transform: none;
   font-size: var(--size-12);
-  line-height: var(--size-14);
+  line-height: 1.2;
   padding: 0 1%;
   margin: 6% 0 3% 0;
 }
@@ -1220,7 +1219,7 @@ img {
   .news-1-text,
   .news-2-text {
     font-size: var(--size-18);
-    line-height: var(--size-18);
+    line-height: 1.2;
   }
 
   .map {
@@ -1233,6 +1232,7 @@ img {
     grid-column: span 10;
     padding: 10%;
   }
+
   .footer .address,
   .footer .contacts {
     flex-flow: column nowrap;
@@ -1246,11 +1246,12 @@ img {
 
   .sm-100-p {
     grid-column: span 30;
-    /*padding-bottom: 60%;*/
+    padding-bottom: 50vh;
   }
 
   .header {
     padding-bottom: 100vh;
+    overflow: hidden;
   }
 
   .header > .bg-img {
@@ -1260,46 +1261,47 @@ img {
   }
 
   .header .content-header {
-    width: 25vw;
+    width: 30vw;
     margin: 10vw;
   }
   .header .socials-list {
-    margin-top: 10vw;
+    margin-top: 5vw;
   }
   .header .social-icon {
     height: 3.2vw;
   }
 
   .header .logo-title {
-    font-size: 3vw;
-    line-height: 3vw;
-  }
-
-  .address,
-  .contacts {
-    font-size: 3em;
-    left: 11vw;
-  }
-
-  .address {
-    top: -30vw;
-  }
-
-  .contacts {
-    top: -15vw;
+    font-size: 3.5vw;
+    line-height: 1.1;
   }
 
   .menu {
     grid-row: 2;
   }
 
-  .hamburger {
+  .menu .address,
+  .menu .contacts {
+    font-size: 3em;
+  }
+
+  .menu .address {
+    left: 10vw;
+    top: -18vw;
+  }
+
+  .menu .contacts {
+    left: 35vw;
+    top: -10vw;
+  }
+
+  .menu .hamburger {
     display: none;
   }
 
-  .main-navigation {
+  .menu .main-navigation {
     width: 100vw;
-    height: 40vh;
+    height: 60vw;
     font-size: 7em;
     left: 0;
     right: 0;
@@ -1318,50 +1320,176 @@ img {
 
   .projects-header {
     grid-row: 3;
+    padding-bottom: 30vh;
+    overflow: hidden;
+  }
+
+  .projects-header .projects-line {
+    transform: rotate(-48deg) translate(0, 60%);
+  }
+
+  .projects-header .projects-nav {
+    transform: scale(8) translate(0, 10%);
+  }
+
+  .projects-header .header-title {
+    transform: scale(1.5) translate(130%, 150%);
+  }
+
+  .content {
+    padding: 10%;
+    --project-title-size: calc( var(--size-32) * 2.5);
+    --project-feature-size: calc( var(--size-18) * 2.5);
+    --project-link-size: calc( var(--size-24) * 2.5);
+    --project-rating-size: calc( var(--size-18) * 2.5);
+  }
+
+  .rating {
+    width: 6vw;
   }
 
   .project-fondue {
     grid-row: 4;
+    font-size: 5em;
+    overflow: hidden;
   }
 
   .project-potter {
     grid-row: 5;
+    overflow: hidden;
+
+  }
+
+  .project-potter .bg-img {
+    object-position: -5vw 25vw;
+    object-fit: contain;
+    transform: scale(1.3);
   }
 
   .project-louis {
     grid-row: 6;
+    padding-bottom: 70vh;
+    overflow: hidden;
+  }
+
+  .project-louis .project-features {
+    flex-flow: column nowrap;
+    width: 40%;
+    height: 45%;
+  }
+
+  .project-louis .bg-img {
+    object-fit: cover;
+    object-position: 0 -17vh;
   }
 
   .project-p22 {
     grid-row: 7;
+    overflow: hidden;
+  }
+
+  .project-p22 .project-features {
+    flex-flow: column nowrap;
+    margin-left: auto;
+    width: 50%;
+    height: 20vh;
+  }
+
+  .project-p22 .bg-img {
+    object-fit: contain;
+    object-position: 0 10vh;
   }
 
   .project-fiji {
     grid-row: 8;
+    overflow: hidden;
+  }
+
+  .project-fiji .project-features {
+    width: 40%;
+  }
+
+  .project-fiji .project-title {
+    width: 40%;
+  }
+
+  .project-fiji .bg-img {
+    object-fit: contain;
+    object-position: 9vw 13vh;
+    transform: scale(1.3);
   }
 
   .project-tabano {
     grid-row: 9;
+    overflow: hidden;
+  }
+
+  .project-tabano .project-features {
+    width: 40%;
+  }
+
+  .project-tabano .bg-img {
+    object-fit: contain;
+    object-position: 20vw 10vh;
+    transform: scale(1.2);
   }
 
   .project-sesann {
     grid-row: 10;
+    padding-bottom: 40vh;
+    overflow: hidden;
+  }
+
+  .project-sesann .content-sesann {
+    padding-top: 45%;
+  }
+
+  .project-sesann .project-features {
+    width: 100%;
+    flex-flow: row nowrap;
+  }
+
+  .project-sesann .bg-img {
+    object-fit: contain;
+    object-position: 0 8vh;
+    transform: scale(1.4);
   }
 
   .project-alessi {
     grid-row: 11;
+    padding-bottom: 35vh;
+  }
+
+  .project-alessi .project-features {
+    height: 90%;
   }
 
   .projects-footer {
     grid-row: 12;
+    padding-bottom: 30vh;
+  }
+  .projects-footer .projects-line {
+    transform: rotate(-48deg) translate(0, 40%);
+  }
+  .projects-footer .projects-nav {
+    transform: scale(8) translate(40%, 20%);;
+  }
+  .projects-footer .header-title {
+    transform: scale(2) translate(100%, 100%);
   }
 
   .studio-header {
     grid-row: 13;
   }
 
-  .studio-description {
+  .studio-description{
     grid-row: 14;
+    padding-bottom: 0;
+  }
+
+  .studio-description .content-studio {
+    position: static;
+    flex-flow: column nowrap;
   }
 
   .staff-header {
@@ -1372,12 +1500,20 @@ img {
     grid-row: 16;
   }
 
+  .staff .content-staff {
+    position: static;
+    flex-flow: column nowrap;
+  }
+
   .news-header {
     grid-row: 17;
   }
 
   .news-list {
     grid-row: 18;
+    padding: 0 10vw;
+    display: block;
+}
   }
 
   .map {
